--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,125 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Itb-yX-PFf">
+                                <rect key="frame" x="170" y="553" width="74" height="30"/>
+                                <state key="normal" title="再生 / 停止"/>
+                                <connections>
+                                    <action selector="playstop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vis-Jh-fTr"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CMR-iF-Uef">
+                                <rect key="frame" x="70" y="373" width="274" height="150"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="FjT-jY-DvO"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="Uft-Uf-YaP" appends="YES" id="5dY-C1-ecg"/>
+                                </connections>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fVr-nI-fDe">
+                                <rect key="frame" x="34" y="433" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="31" id="3LP-zB-V6U"/>
+                                    <constraint firstAttribute="height" constant="30" id="u96-gc-bGd"/>
+                                </constraints>
+                                <state key="normal" title="戻る"/>
+                                <connections>
+                                    <action selector="beforeimage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nCV-yt-yh2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2RW-CQ-TJq">
+                                <rect key="frame" x="349" y="433" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="31" id="k4f-ec-suE"/>
+                                    <constraint firstAttribute="height" constant="30" id="sLH-Nc-g1X"/>
+                                </constraints>
+                                <state key="normal" title="進む"/>
+                                <connections>
+                                    <action selector="nextimage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mKd-X6-A4c"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CMR-iF-Uef" secondAttribute="trailing" constant="70" id="3fx-Cp-Dvy"/>
+                            <constraint firstItem="Itb-yX-PFf" firstAttribute="top" secondItem="CMR-iF-Uef" secondAttribute="bottom" constant="30" id="8TN-hT-qn1"/>
+                            <constraint firstItem="fVr-nI-fDe" firstAttribute="centerY" secondItem="CMR-iF-Uef" secondAttribute="centerY" id="IkM-AB-L6s"/>
+                            <constraint firstItem="2RW-CQ-TJq" firstAttribute="leading" secondItem="CMR-iF-Uef" secondAttribute="trailing" constant="5" id="W26-4n-J7p"/>
+                            <constraint firstItem="CMR-iF-Uef" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="WfD-r5-Ygs"/>
+                            <constraint firstItem="Itb-yX-PFf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ecq-Y5-Xao"/>
+                            <constraint firstItem="fVr-nI-fDe" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="fnb-vG-B0j"/>
+                            <constraint firstItem="CMR-iF-Uef" firstAttribute="leading" secondItem="fVr-nI-fDe" secondAttribute="trailing" constant="5" id="gmg-MT-per"/>
+                            <constraint firstItem="2RW-CQ-TJq" firstAttribute="centerY" secondItem="CMR-iF-Uef" secondAttribute="centerY" id="oAU-Hl-aKG"/>
+                            <constraint firstItem="CMR-iF-Uef" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ock-5y-wCO"/>
+                            <constraint firstItem="2RW-CQ-TJq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="qEg-EZ-cqd"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="beforImage" destination="fVr-nI-fDe" id="LCG-7d-CBo"/>
+                        <outlet property="nextImage" destination="2RW-CQ-TJq" id="W0X-Hk-Rfp"/>
+                        <outlet property="slideshowview" destination="CMR-iF-Uef" id="GIF-oE-Lkp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Uft-Uf-YaP">
+                    <connections>
+                        <action selector="windowchange:" destination="BYZ-38-t0r" id="SxW-hc-9X6"/>
+                        <segue destination="U9w-lK-MgS" kind="show" id="E1f-av-NCC"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="136.23188405797103" y="136.95652173913044"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="EZ5-8Y-oiQ">
+            <objects>
+                <viewController id="U9w-lK-MgS" customClass="imageViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YTf-6S-4hO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZP7-WF-UFc">
+                                <rect key="frame" x="10" y="10" width="394" height="748"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mw9-MI-HFJ">
+                                <rect key="frame" x="185" y="768" width="44" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="Zjj-iA-kqu"/>
+                                </constraints>
+                                <state key="normal" title="戻る"/>
+                                <connections>
+                                    <segue destination="f5t-wD-i7R" kind="unwind" unwindAction="unwind:" id="dLI-jF-OFX"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ZP7-WF-UFc" firstAttribute="top" secondItem="7wq-mU-OfG" secondAttribute="top" constant="10" id="Wjq-nH-Zpw"/>
+                            <constraint firstItem="ZP7-WF-UFc" firstAttribute="leading" secondItem="7wq-mU-OfG" secondAttribute="leading" constant="10" id="XzR-IV-YVl"/>
+                            <constraint firstItem="7wq-mU-OfG" firstAttribute="bottom" secondItem="Mw9-MI-HFJ" secondAttribute="bottom" constant="10" id="eiM-ch-Erw"/>
+                            <constraint firstItem="Mw9-MI-HFJ" firstAttribute="top" secondItem="ZP7-WF-UFc" secondAttribute="bottom" constant="10" id="iWu-f2-AgI"/>
+                            <constraint firstItem="Mw9-MI-HFJ" firstAttribute="centerX" secondItem="YTf-6S-4hO" secondAttribute="centerX" id="nbg-2q-gMK"/>
+                            <constraint firstItem="7wq-mU-OfG" firstAttribute="trailing" secondItem="ZP7-WF-UFc" secondAttribute="trailing" constant="10" id="tAa-C6-o97"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7wq-mU-OfG"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="hht-JZ-gka"/>
+                    <connections>
+                        <outlet property="extendview" destination="ZP7-WF-UFc" id="RdI-LZ-oFG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kL2-Ze-rbr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="f5t-wD-i7R" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="923.1884057971015" y="136.14130434782609"/>
         </scene>
     </scenes>
 </document>
